# astrobro

./: .cursorrules  .gitignore  .markdownlint.jsonc  00 Natal Chart.py  CHANGELOG.md  CLAUDE.md  README.md  archive.py  birth.py  const.py  main.py  main.py.bak  preprocess_cities.ipynb  pyproject.toml  requirements.txt  style.css  style.scss  synastry.py  transit.py  ui.py  utils.py
.cursor/rules/: python-style.mdc  uv.mdc
.streamlit/: config.toml
docs/: index.html  main.py  manifest.json  style.scss  synastry.py  transit.py  ui.py
pages/: 01 Synastry Chart.py  02 Transit Chart.py
st_screen_detector/: __init__.py
st_screen_detector/frontend/: index.html  main.js  package-lock.json  package.json
tests/: __init__.py  test_birth.py  test_transit.py  test_try.py
