[project]
name = "astrobro"
version = "0.9.0"
description = "your pocket astrologer 💫"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "natal[report]>=0.9.3",
    "st-screenwidth-detector>=0.1.4",
    "streamlit>=1.44.1",
    "streamlit-shortcuts>=0.1.9",
]

[tool.ruff]
isort.no-sections = true
extend-ignore = ["E203", "E402", "E501", "F401", "F811"]
