[project]
name = "astrobro"
version = "1.0.0"
description = "your pocket astrologer 💫"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "natal",
    "st-screenwidth-detector",
    "streamlit",
    "streamlit-local-storage",
    "streamlit-shortcuts",
]

[tool.ruff]
isort.no-sections = true
extend-ignore = ["E203", "E402", "E501", "E712", "F401", "F811"]

[dependency-groups]
dev = [
    "ipykernel",
 "pytest>=8.4.1",
 "ruff",
 "watchdog",
]
